fix: Update font weights and adjust black color variable for better contrast

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -13,7 +13,8 @@
   --sl-color-gray-5: #383838;
   --sl-color-gray-6: #272727;
   --sl-color-black: #181818;
-  font-weight: 400;
+  font-weight: 500;
+
 }
 /* Light mode colors. */
 :root[data-theme="light"] {
@@ -28,7 +29,8 @@
   --sl-color-gray-5: #c2c2c2;
   --sl-color-gray-6: #eeeeee;
   --sl-color-gray-7: #f6f6f6;
-  --sl-color-black: #ffffff;
+  --sl-color-black: #dce6ddd8;
+  font-weight: 500;
 }
 
 a {
